--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI = mongodb://localhost:27017
+MONGO_URI = mongodb+srv://mk708133:mahesh7kumar9@cluster0.ofiuien.mongodb.net/notes?retryWrites=true&w=majority&appName=Cluster0
